--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <main>
 
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut libero omnis id voluptate, perspiciatis, ab sed recusandae, cum minima itaque voluptates aperiam quidem laboriosam? Autem nisi assumenda architecto recusandae.</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magnam deleniti vero. Unde distinctio ab quam voluptatum in. Praesentium cum obcaecati tempora vero est officiis saepe dolorum. Quae, unde ipsa?</p>
         </article>
 
     </main>
